fix spacing of locations

--- a/src/app/location/location.component.css
+++ b/src/app/location/location.component.css
@@ -11,3 +11,7 @@ ul {
     padding: 0 !important;
     margin: 0 !important;
 }
+
+/* li.list-group-item.Africa {
+    background-color: black !important;
+} */
